--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
@@ -25,6 +24,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
+    "react-router-dom": "^7.6.0",
     "rollup": "^4.24.3",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "^5.6.3"
