--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "rollup": "^4.24.3",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "tslib": "^2.8.1"
   }
 }
